--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
 <span> Hello, World </span>
+
+<script>
+  async function getData() {
+  const url = "https://github.com/DumbDumbieh/DumbDumbieh.github.io/blob/main/test.txt";
+  try {
+    const response = await fetch(url);
+    if (!response.ok) {
+      throw new Error(`Response status: ${response.status}`);
+    }
+
+    const json = await response.json();
+    console.log(json);
+  } catch (error) {
+    console.error(error.message);
+  }
+}
+
+</script>
